# Port-Destroyer

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_UBUNTU.md  UBUNTU_FIX.sh  port-destroyer  port_destroyer.py  port_destroyer_tray.py  port_destroyer_tray_linux.py  pyproject.toml  requirements.txt  start_tray.sh
.github/: SECURITY.md
